public/styles/timeline.css
.timeline {
    .timeline-component {
        position: relative;
        margin: auto;

        @media (min-width: 768px) {
            .timeline-item:nth-child(even) .timeline-article {
                direction: rtl;
            }

            .timeline-item:nth-child(even) .timeline-article>* {
                direction: ltr;
            }
        }

        /* timeline-line */
        &&::before {
            content: "";
            position: absolute;
            top: 0;
            left: 20%;
            width: 2px;
            height: 100%;
            background-color: var(--tertiary-color);
            opacity: .5;

            @media (min-width: 768px) {
                /* display: none; */
                left: 50%;
            }
        }

        &::after {
            content: "";
            position: absolute;
            top: 0;
            left: 20%;
            width: 2px;
            height: 100%;
            background-color: var(--secondary-color);
            transform-origin: top;
            transform: scaleY(0);
            animation: progress-line linear;
            animation-timeline: view();
            animation-range: cover;

            @media (min-width: 768px) {
                left: 50%;
            }
        }

        .timeline-item {
            display: grid;
            grid-template-columns: 20% 80%;
            column-gap: 1em;
            overflow: hidden;
            padding-top: 5em;
            color: var(--tertiary-color);

            @media (min-width: 768px) {
                display: block;
                padding-top: 5em;
            }

            .timeline-year {
                text-align: center;
                font-weight: 400;
                font-style: italic;
                position: relative;
                color: var(--secondary-color);

                display: flex;
                justify-content: center;
                align-items: center;

                &::after {
                    content: "";
                    position: absolute;
                    right: -.5px;
                    top: 50%;
                    transform: translate(50%, -50%);
                    width: 10px;
                    height: 10px;
                    border-radius: 50%;
                    background-color: var(--tertiary-color);
                    border: 5px solid var(--primary-color);
                }

                @media (min-width: 768px) {
                    display: none;
                }
            }

            .timeline-article {
                display: flex;
                flex-direction: column;
                gap: .8em;
                position: relative;

                @media (min-width: 768px) {
                    display: grid;
                    grid-template-columns: 1fr 1fr;
                    gap: 3em;
                    align-items: center;

                    &::before {
                        content: "";
                        position: absolute;
                        left: 50.2%;
                        top: 50%;
                        transform: translate(-50%, -50%);
                        width: 10px;
                        height: 10px;
                        border-radius: 50%;
                        background-color: var(--tertiary-color);
                        border: 5px solid var(--primary-color);
                        z-index: 10;
                    }

                }



                .timeline-article-content {
                    display: flex;
                    flex-direction: column;
                    gap: .8em;
                    margin-right: 1em;

                    date {
                        font-weight: 400;
                    }

                    .timeline-details {
                        summary {
                            /* width: 100%; */
                            padding: .5em 0;
                            border-top: 1px solid var(--tertiary-color);
                            position: relative;
                            cursor: pointer;
                            list-style: none;
                        }
                    }

                    .timeline-details summary:after {
                        content: "+";
                        color: var(--tertiary-color);
                        position: absolute;
                        font-size: 2em;
                        right: 0;
                        top: 0;
                        font-weight: 200;
                        transform-origin: center;
                        transition: .2s ease-in-out;
                    }

                    .timeline-details[open] summary:after {
                        transform: rotate(45deg);
                    }

                    .timeline-details[open] .timeline-details-content {
                        animation: open .3s ease-in-out;
                        opacity: 0.7;
                        font-style: italic;

                    }
                }

                .timeline-article-image {
                    img {
                        width: 100%;
                        height: 200px;
                        object-fit: cover;

                        @media (min-width: 768px) {
                            height: 350px;
                        }
                    }
                }
            }
        }
    }
}

@media (prefers-reduced-motion: no-preference) {
    .timeline-item {
        animation: fadeIn forwards;
        animation-timeline: view();
        animation-range: entry;
    }
}

@keyframes open {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 0.7;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes progress-line {
    from {
        transform: scaleY(0);
    }

    to {
        transform: scaleY(1);
    }
}

